chore: finished flask upload and backend without restful

--- a/Pipfile
+++ b/Pipfile
@@ -6,13 +6,17 @@ name = "pypi"
 [packages]
 ipdb = "0.13.9"
 flask = "*"
-flask-sqlalchemy = "*"
+flask-sqlalchemy = "1.3.24"
 flask-migrate = "*"
 sqlalchemy-serializer = "*"
 flask-restful = "*"
 flask-cors = "*"
 faker = "*"
 flask-bcrypt = "*"
+flask-uploads = "*"
+werkzeug = "==0.16.1"
+markupsafe = "==1.1.1"
+sqlalchemy = "==1.3.24"
 
 [requires]
-python_full_version = "3.8.13"
+python_full_version = "3"
