--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ flask-uploads = "*"
 werkzeug = "==0.16.1"
 markupsafe = "==1.1.1"
 sqlalchemy = "==1.3.24"
+python-dotenv = "*"
 
 [requires]
 python_full_version = "3"
